--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,9 +3,11 @@
     description: Informs the user about an imminent three-way-merge
     entry: antimerger-premerge.sh
     language: script
+    stages: [pre-merge-commit]
 
 -   id: antimerger-precommit
     name: Antimerger Pre-Commit hook
     description: Aborts the creation of a merge commit
     entry: antimerger-precommit.sh
     language: script
+    stages: [pre-commit]
