fix: added rule to always run the pre-commit hook

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -10,4 +10,5 @@
     description: Aborts the creation of a merge commit
     entry: antimerger-precommit.sh
     language: script
+    always_run: true
     stages: [pre-commit]
